# Devin-for-Bonanza

./: LICENSE  README.md  bingo.php  bridge_server.py  get_mac_address.php  pyproject.toml  script.js  send_websocket_message.php  sub_bridge_server.py  test_fixes.sh  test_websocket.html  websocket_client.js
attachments/: report_by_site.php  style.css
azkiosk_client/: balance_db_updater.py  cloud_server.py  local_client.py  stream_balance_adjustment.py  test.proto  test_pb2.py  test_pb2_grpc.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.tsx
inventory_demo/: Dockerfile  Procfile  fly.toml  pyproject.toml  run.sh
inventory_demo/app/: main.py
inventory_demo/inventory_demo/app/: main.py
src/inventory_demo/: main.py
src/websocket/: bridge_server.py  sub_bridge_client.py  websocket_server.py
